fix: adjust horizontal padding to keep icons centered when collapsed

--- a/assets/css/nav/_left_nav.scss
+++ b/assets/css/nav/_left_nav.scss
@@ -18,7 +18,7 @@
 }
 
 .m-left-nav--collapsed {
-  width: 4.25rem;
+  width: min-content;
 
   .m-left-nav__icon {
     padding-right: 0;
@@ -40,7 +40,7 @@
   @include button-icon(1.25rem);
   display: flex;
   align-items: center;
-  padding: 0.25rem 0.375rem;
+  padding: 0.25rem 0.5rem;
   box-sizing: border-box;
   width: 100%;
   height: 2.25rem;
